<resources>
    <string name="app_name">CyberpaySdk</string>
    <string name="test_message">This is a test page to see how payment works. Do not use for production</string>
    <string name="logo_content_desc">logo</string>
    <string name="pay_options">Payment Options</string>
    <string name="bank">Pay with bank</string>
    <string name="card">Pay with card</string>
    <string name="card_hint">Card Number</string>
    <string name="cvv_hint">CVV</string>
    <string name="expiry_hint">MM/YY</string>
    <string name="bank_hint">Select Bank</string>
    <string name="account_hint">Account Number</string>
    <string name="pay">Pay ₦</string>
    <string name="secure">Secured by</string>
    <string name="otp_text">Enter OTP Sent</string>
    <string name="default_otp_message">Kindly enter the one time password sent to your phone number or email address to complete transaction</string>
    <string name="otp">123456</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="continue_text">Continue</string>
    <string name="pin_text">Enter Card Pin</string>
    <string name="default_pin_message">To ensure you own this card, kindly enter your pin to continue</string>
    <string name="checkout">Checkout</string>
    <string name="process">Processing Transaction</string>
    <string name="naira">NGN</string>
    <string name="page_error">There was an error loading the transaction page. kindly check your network connection</string>
    <string name="error_title">Oops!</string>
    <string name="error_retry">Retry</string>
    <string name="select_bank">Select Bank</string>
    <string name="search_hint">Search</string>
    <string name="redirect_auth">You will be redirected to your internet banking for authorization</string>
    <string name="redirect_bank">You will be redirected to your bank to complete the transaction</string>
    <string name="cancel">Cancel</string>
    <string name="enrol_otp">Enroll Otp</string>
    <string name="enrol_phone">Enter Phone Number</string>
    <string name="phone_hint">Phone Number</string>
    <string name="enrol_text">You have not registered for OTP. Enter your phone number below to register</string>
    <string name="default_bank_otp">You have not registered for OTP. Kindly enter the one time password sent to your phone number or email address to register</string>
    <string name="pay_title">Pay</string>
    <string name="verify">Verifying...</string>
    <string name="sample_name">Sunday Okpoluaefe</string>
    <string name="dob_hint">Date of birth</string>
    <string name="dob_title">Provide Date of Birth</string>
    <string name="total_amount">Total Amount</string>
    <string name="naira_sign">₦</string>
    <string name="passenger_info">Confirm Passenger Information</string>
    <string name="default_payment_info_confirm">Kindly confirm your personal information to allow us manage the information with transport provider before you complete your transaction</string>


</resources>
