<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:orientation="vertical"
    android:gravity="bottom|center"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|top"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

   <com.cyberspace.cyberpaysdk.ui.widget.PinPad
       android:id="@+id/pad"
       android:layout_width="match_parent"
       app:randomiseKeys="false"
       app:desc="@string/default_otp_message"
       android:text="@string/pin_text"
       app:title="@string/otp_text"
       app:pinLength="10"
       android:layout_height="match_parent"/>

</FrameLayout>