<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="@dimen/horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_marginBottom="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:src="@drawable/ic_redirect"
        android:layout_width="@dimen/image_size_medium"
        android:layout_height="@dimen/image_size_medium"/>

    <com.cyberspace.cyberpaysdk.utils.fonts.Medium
        android:id="@+id/message"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/horizontal_margin"
        android:layout_width="wrap_content"
        android:textColor="#555555"
        android:lineSpacingExtra="@dimen/text_line_spacing"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_font"
        android:text="@string/redirect_bank"/>

    <com.cyberspace.cyberpaysdk.utils.fonts.Bold
        android:id="@+id/bt_continue"
        android:textSize="@dimen/medium_font"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/space_small"
        android:text="@string/continue_text"
        android:layout_gravity="center"
        style="@style/button"
        />

    <com.cyberspace.cyberpaysdk.utils.fonts.Medium
        android:id="@+id/close"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:textColor="#555555"
        android:textSize="@dimen/medium_font"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:layout_height="wrap_content"/>

</LinearLayout>